--- a/Kombit.Samples.CH.WebsiteDemo/Web.config
+++ b/Kombit.Samples.CH.WebsiteDemo/Web.config
@@ -5,6 +5,9 @@
     <section name="SAML20Federation" type="dk.nita.saml20.config.ConfigurationReader, dk.nita.saml20" />
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,Log4net" requirePermission="false" />
   </configSections>
+  <appSettings>
+    <add key="SignatureAlgorithmMethod" value="Sha256"/>
+  </appSettings>
   <log4net>
     <root>
       <level value="All" />
