#13594 Re-configure all samples to work with projekt-stoettesystemerne.dk - .Net CH sample

--- a/Deployment/Kombit.Samples.CH.WebsiteDemo/Web.config
+++ b/Deployment/Kombit.Samples.CH.WebsiteDemo/Web.config
@@ -5,6 +5,9 @@
     <section name="SAML20Federation" type="dk.nita.saml20.config.ConfigurationReader, dk.nita.saml20" />
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,Log4net" requirePermission="false" />
   </configSections>
+  <appSettings>
+    <add key="SignatureAlgorithmMethod" value="Sha256"/>
+  </appSettings>
   <log4net>
     <root>
       <level value="All" />
@@ -33,10 +36,10 @@
   <Federation auditLoggingType="dk.nita.saml20.Logging.Log4NetAuditLogger, dk.nita.saml20.ext.audit.log4net"
   xmlns="urn:dk.nita.saml20.configuration">
     <SessionTimeout>30</SessionTimeout>
-    <SigningCertificate findValue="ee 9b ab c4 45 48 d6 ae 66 a6 c6 31 4e b9 1c 5e 1c 75 46 38" storeLocation="LocalMachine"
+    <SigningCertificate findValue="23644551A39DD15FF454C27C5421FC618AC24201" storeLocation="LocalMachine"
     storeName="My" x509FindType="FindByThumbprint" />
     <AllowedAudienceUris>
-      <Audience>https://chwebsitedemo.test-stoettesystemerne.dk</Audience>
+      <Audience>https://adgangsstyring.projekt-stoettesystemerne.dk/websitedemo</Audience>
     </AllowedAudienceUris>
     <Actions>
       <clear />
@@ -47,11 +50,11 @@
   </Federation>
   <SAML20Federation xmlns="urn:dk.nita.saml20.configuration">
     <ShowError>true</ShowError>
-    <ServiceProvider id="https://chwebsitedemo.test-stoettesystemerne.dk" server="https://chwebsitedemo.test-stoettesystemerne.dk">
-      <ServiceEndpoint localpath="/login.ashx" type="signon" redirectUrl="/MyPage.aspx?action=sso" index="0" />
-      <ServiceEndpoint localpath="/logout.ashx" type="logout" redirectUrl="/Default.aspx" index="1" />
-      <ServiceEndpoint localpath="/logout.ashx" type="soaplogout" errorBehaviour="throwexception" />
-      <ServiceEndpoint localpath="/metadata.ashx" type="metadata" />
+    <ServiceProvider id="https://adgangsstyring.projekt-stoettesystemerne.dk/websitedemo" server="https://adgangsstyring.projekt-stoettesystemerne.dk/websitedemo">
+      <ServiceEndpoint localpath="/websitedemo/login.ashx" type="signon" redirectUrl="/websitedemo/MyPage.aspx?action=sso" index="0" />
+      <ServiceEndpoint localpath="/websitedemo/logout.ashx" type="logout" redirectUrl="/websitedemo/Default.aspx" index="1" />
+      <ServiceEndpoint localpath="/websitedemo/logout.ashx" type="soaplogout" errorBehaviour="throwexception" />
+      <ServiceEndpoint localpath="/websitedemo/metadata.ashx" type="metadata" />
       <md:ContactPerson contactType="administrative" xmlns:md="urn:oasis:names:tc:SAML:2.0:metadata">
         <md:Company>KOMBIT</md:Company>
         <md:GivenName>KOMBIT</md:GivenName>
@@ -66,7 +69,7 @@
     </RequestedAttributes>
     <NameIdFormat>urn:oasis:names:tc:SAML:1.1:nameid-format:X509SubjectName</NameIdFormat>
     <IDPEndPoints metadata="metadata">
-      <add id="https://saml.adgangsstyring.stoettesystemerne.dk/">
+      <add id="https://saml.adgangsstyring.projekt-stoettesystemerne.dk">
         <CertificateValidation>
           <add type="dk.nita.saml20.Specification.SelfIssuedCertificateSpecification, dk.nita.saml20" />
         </CertificateValidation>
@@ -76,7 +79,7 @@
   </SAML20Federation>
   <system.web>
     <authentication mode="Forms">
-      <forms cookieless="UseCookies" loginUrl="/login.ashx" name="DemoServiceProvider" timeout="30" />
+      <forms cookieless="UseCookies" loginUrl="/websitedemo/login.ashx" name="DemoServiceProvider" timeout="30" />
     </authentication>
     <sessionState mode="Off" />
     <!--     
