--- a/Deployment/Kombit.Samples.CH.WebsiteDemo/Web.config
+++ b/Deployment/Kombit.Samples.CH.WebsiteDemo/Web.config
@@ -36,10 +36,10 @@
   <Federation auditLoggingType="dk.nita.saml20.Logging.Log4NetAuditLogger, dk.nita.saml20.ext.audit.log4net"
   xmlns="urn:dk.nita.saml20.configuration">
     <SessionTimeout>30</SessionTimeout>
-    <SigningCertificate findValue="23644551A39DD15FF454C27C5421FC618AC24201" storeLocation="LocalMachine"
+    <SigningCertificate findValue="4678237245FEDC8059D113675955DFB870D36BF4" storeLocation="LocalMachine"
     storeName="My" x509FindType="FindByThumbprint" />
     <AllowedAudienceUris>
-      <Audience>https://adgangsstyring.projekt-stoettesystemerne.dk/websitedemo</Audience>
+      <Audience>https://saml.adgangsstyring.projekt-stoettesystemerne.dk/websitedemo</Audience>
     </AllowedAudienceUris>
     <Actions>
       <clear />
@@ -50,7 +50,7 @@
   </Federation>
   <SAML20Federation xmlns="urn:dk.nita.saml20.configuration">
     <ShowError>true</ShowError>
-    <ServiceProvider id="https://adgangsstyring.projekt-stoettesystemerne.dk/websitedemo" server="https://adgangsstyring.projekt-stoettesystemerne.dk/websitedemo">
+    <ServiceProvider id="https://saml.adgangsstyring.projekt-stoettesystemerne.dk/websitedemo" server="https://adgangsstyring.projekt-stoettesystemerne.dk/websitedemo">
       <ServiceEndpoint localpath="/websitedemo/login.ashx" type="signon" redirectUrl="/websitedemo/MyPage.aspx?action=sso" index="0" />
       <ServiceEndpoint localpath="/websitedemo/logout.ashx" type="logout" redirectUrl="/websitedemo/Default.aspx" index="1" />
       <ServiceEndpoint localpath="/websitedemo/logout.ashx" type="soaplogout" errorBehaviour="throwexception" />
@@ -65,7 +65,12 @@
     </ServiceProvider>
     <RequestedAttributes>
       <!-- The attributes that the demonstration identity provider issues. -->
-      <att name="http://schemas.xmlsoap.org/ws/2005/05/identity/claims/name" isRequired="true" />
+      <!--<att name="http://schemas.xmlsoap.org/ws/2005/05/identity/claims/name" isRequired="true" />-->
+      <att name="dk:gov:saml:attribute:AssuranceLevel" isRequired="true" />
+      <att name="dk:gov:saml:attribute:SpecVer" isRequired="true" />
+      <att name="dk:gov:saml:attribute:KombitSpecVer" isRequired="true" />
+      <att name="dk:gov:saml:attribute:CvrNumberIdentifier" isRequired="false" />
+      <att name="dk:gov:saml:attribute:Privileges_intermediate" isRequired="false" />
     </RequestedAttributes>
     <NameIdFormat>urn:oasis:names:tc:SAML:1.1:nameid-format:X509SubjectName</NameIdFormat>
     <IDPEndPoints metadata="metadata">
