--- a/Kombit.Samples.CH.WebsiteDemo/Web.config
+++ b/Kombit.Samples.CH.WebsiteDemo/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0"?>
 <configuration>
   <configSections>
     <section name="Federation" type="dk.nita.saml20.config.ConfigurationReader, dk.nita.saml20" />
@@ -6,7 +6,7 @@
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,Log4net" requirePermission="false" />
   </configSections>
   <appSettings>
-    <add key="SignatureAlgorithmMethod" value="Sha256" />
+    <add key="SignatureAlgorithmMethod" value="Sha256"/>
   </appSettings>
   <log4net>
     <root>
@@ -32,11 +32,14 @@
       </authorization>
     </system.web>
   </location>
-  <Federation auditLoggingType="dk.nita.saml20.Logging.Log4NetAuditLogger, dk.nita.saml20.ext.audit.log4net" xmlns="urn:dk.nita.saml20.configuration">
+  <!-- Session provider defaults to dk.nita.saml20.session.inproc.InProcSessions if sessionType is not defined. -->
+  <Federation auditLoggingType="dk.nita.saml20.Logging.Log4NetAuditLogger, dk.nita.saml20.ext.audit.log4net"
+  xmlns="urn:dk.nita.saml20.configuration">
     <SessionTimeout>30</SessionTimeout>
-    <SigningCertificate findValue="8b0479850206c808a2f0366ca3985e036b404436" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint" />
+    <SigningCertificate findValue="4678237245FEDC8059D113675955DFB870D36BF4" storeLocation="LocalMachine"
+    storeName="My" x509FindType="FindByThumbprint" />
     <AllowedAudienceUris>
-      <Audience>https://saml.claimapp.adgangsstyring.projekt-stoettesystemerne.dk</Audience>
+      <Audience>https://saml.adgangsstyring.projekt-stoettesystemerne.dk/websitedemo</Audience>
     </AllowedAudienceUris>
     <Actions>
       <clear />
@@ -47,11 +50,11 @@
   </Federation>
   <SAML20Federation xmlns="urn:dk.nita.saml20.configuration">
     <ShowError>true</ShowError>
-    <ServiceProvider id="https://saml.claimapp.adgangsstyring.projekt-stoettesystemerne.dk" server="https://claimapp.adgangsstyring.projekt-stoettesystemerne.dk">
-      <ServiceEndpoint localpath="/login.ashx" type="signon" redirectUrl="/MyPage.aspx?action=sso" index="0" />
-      <ServiceEndpoint localpath="/logout.ashx" type="logout" redirectUrl="/Default.aspx" index="1" />
-      <ServiceEndpoint localpath="/logout.ashx" type="soaplogout" errorBehaviour="throwexception" />
-      <ServiceEndpoint localpath="/metadata.ashx" type="metadata" />
+    <ServiceProvider id="https://saml.adgangsstyring.projekt-stoettesystemerne.dk/websitedemo" server="https://adgangsstyring.projekt-stoettesystemerne.dk/websitedemo">
+      <ServiceEndpoint localpath="/websitedemo/login.ashx" type="signon" redirectUrl="/websitedemo/MyPage.aspx?action=sso" index="0" />
+      <ServiceEndpoint localpath="/websitedemo/logout.ashx" type="logout" redirectUrl="/websitedemo/Default.aspx" index="1" />
+      <ServiceEndpoint localpath="/websitedemo/logout.ashx" type="soaplogout" errorBehaviour="throwexception" />
+      <ServiceEndpoint localpath="/websitedemo/metadata.ashx" type="metadata" />
       <md:ContactPerson contactType="administrative" xmlns:md="urn:oasis:names:tc:SAML:2.0:metadata">
         <md:Company>KOMBIT</md:Company>
         <md:GivenName>KOMBIT</md:GivenName>
@@ -61,6 +64,8 @@
       </md:ContactPerson>
     </ServiceProvider>
     <RequestedAttributes>
+      <!-- The attributes that the demonstration identity provider issues. -->
+      <!--<att name="http://schemas.xmlsoap.org/ws/2005/05/identity/claims/name" isRequired="true" />-->
       <att name="dk:gov:saml:attribute:AssuranceLevel" isRequired="true" />
       <att name="dk:gov:saml:attribute:SpecVer" isRequired="true" />
       <att name="dk:gov:saml:attribute:KombitSpecVer" isRequired="true" />
@@ -69,9 +74,9 @@
     </RequestedAttributes>
     <NameIdFormat>urn:oasis:names:tc:SAML:1.1:nameid-format:X509SubjectName</NameIdFormat>
     <IDPEndPoints metadata="metadata">
-      <add id="https://saml.adgangsstyring.projekt-stoettesystemerne.dk">
+      <add id="https://saml.adgangsstyring.projekt-stoettesystemerne.dk" OmitAssertionSignatureCheck="true">
         <CertificateValidation>
-          <add type="dk.nita.saml20.Specification.DefaultCertificateSpecification, dk.nita.saml20, Version=1.7.11.0, Culture=neutral" />
+          <add type="dk.nita.saml20.Specification.SelfIssuedCertificateSpecification, dk.nita.saml20" />
         </CertificateValidation>
       </add>
     </IDPEndPoints>
@@ -79,10 +84,28 @@
   </SAML20Federation>
   <system.web>
     <authentication mode="Forms">
-      <forms cookieless="UseCookies" loginUrl="/login.ashx" name="DemoServiceProvider" timeout="30" />
+      <forms cookieless="UseCookies" loginUrl="/websitedemo/login.ashx" name="DemoServiceProvider" timeout="30" />
     </authentication>
     <sessionState mode="Off" />
+    <!--     
+      Set compilation debug="true" to insert debugging 
+      symbols into the compiled page. Because this 
+      affects performance, set this value to true only 
+      during development.
+    -->
     <compilation debug="true" targetFramework="4.5" />
+    <!--
+      The <customErrors> section enables configuration 
+      of what to do if/when an unhandled error occurs 
+      during the execution of a request. Specifically, 
+      it enables developers to configure html error pages 
+      to be displayed in place of a error stack trace.
+
+    <customErrors mode="RemoteOnly" defaultRedirect="GenericErrorPage.htm">
+      <error statusCode="403" redirect="NoAccess.htm" />
+      <error statusCode="404" redirect="FileNotFound.htm" />
+    </customErrors>
+    -->
     <customErrors mode="Off" />
     <pages controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID" />
   </system.web>
@@ -146,7 +169,7 @@
       </requestFiltering>
     </security>
   </system.webServer>
-  <runtime>
+<runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
