--- a/Deployment/Kombit.Samples.CH.WebsiteDemo/Web.config
+++ b/Deployment/Kombit.Samples.CH.WebsiteDemo/Web.config
@@ -34,9 +34,9 @@
   </location>
   <Federation auditLoggingType="dk.nita.saml20.Logging.Log4NetAuditLogger, dk.nita.saml20.ext.audit.log4net" xmlns="urn:dk.nita.saml20.configuration">
     <SessionTimeout>30</SessionTimeout>
-    <SigningCertificate findValue="8b0479850206c808a2f0366ca3985e036b404436" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint" />
+    <SigningCertificate findValue="4678237245FEDC8059D113675955DFB870D36BF4" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint" />
     <AllowedAudienceUris>
-      <Audience>https://saml.claimapp.adgangsstyring.projekt-stoettesystemerne.dk</Audience>
+      <Audience>https://saml.adgangsstyring.projekt-stoettesystemerne.dk/websitedemo</Audience>
     </AllowedAudienceUris>
     <Actions>
       <clear />
@@ -47,11 +47,11 @@
   </Federation>
   <SAML20Federation xmlns="urn:dk.nita.saml20.configuration">
     <ShowError>true</ShowError>
-    <ServiceProvider id="https://saml.claimapp.adgangsstyring.projekt-stoettesystemerne.dk" server="https://claimapp.adgangsstyring.projekt-stoettesystemerne.dk">
-      <ServiceEndpoint localpath="/login.ashx" type="signon" redirectUrl="/MyPage.aspx?action=sso" index="0" />
-      <ServiceEndpoint localpath="/logout.ashx" type="logout" redirectUrl="/Default.aspx" index="1" />
-      <ServiceEndpoint localpath="/logout.ashx" type="soaplogout" errorBehaviour="throwexception" />
-      <ServiceEndpoint localpath="/metadata.ashx" type="metadata" />
+    <ServiceProvider id="https://saml.adgangsstyring.projekt-stoettesystemerne.dk/websitedemo" server="https://adgangsstyring.projekt-stoettesystemerne.dk/websitedemo">
+      <ServiceEndpoint localpath="/websitedemo/login.ashx" type="signon" redirectUrl="/websitedemo/MyPage.aspx?action=sso" index="0" />
+      <ServiceEndpoint localpath="/websitedemo/logout.ashx" type="logout" redirectUrl="/websitedemo/Default.aspx" index="1" />
+      <ServiceEndpoint localpath="/websitedemo/logout.ashx" type="soaplogout" errorBehaviour="throwexception" />
+      <ServiceEndpoint localpath="/websitedemo/metadata.ashx" type="metadata" />
       <md:ContactPerson contactType="administrative" xmlns:md="urn:oasis:names:tc:SAML:2.0:metadata">
         <md:Company>KOMBIT</md:Company>
         <md:GivenName>KOMBIT</md:GivenName>
