Fix the audience to https://adgangsstyring.projekt-stoettesystemerne.dk/websitedemo

--- a/Kombit.Samples.CH.WebsiteDemo/Web.config
+++ b/Kombit.Samples.CH.WebsiteDemo/Web.config
@@ -36,7 +36,7 @@
     <SessionTimeout>30</SessionTimeout>
     <SigningCertificate findValue="4678237245FEDC8059D113675955DFB870D36BF4" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint" />
     <AllowedAudienceUris>
-      <Audience>https://saml.adgangsstyring.projekt-stoettesystemerne.dk/websitedemo</Audience>
+      <Audience>https://adgangsstyring.projekt-stoettesystemerne.dk/websitedemo</Audience>
     </AllowedAudienceUris>
     <Actions>
       <clear />
@@ -47,7 +47,7 @@
   </Federation>
   <SAML20Federation xmlns="urn:dk.nita.saml20.configuration">
     <ShowError>true</ShowError>
-    <ServiceProvider id="https://saml.adgangsstyring.projekt-stoettesystemerne.dk/websitedemo" server="https://adgangsstyring.projekt-stoettesystemerne.dk/websitedemo">
+    <ServiceProvider id="https://adgangsstyring.projekt-stoettesystemerne.dk/websitedemo" server="https://adgangsstyring.projekt-stoettesystemerne.dk/websitedemo">
       <ServiceEndpoint localpath="/websitedemo/login.ashx" type="signon" redirectUrl="/websitedemo/MyPage.aspx?action=sso" index="0" />
       <ServiceEndpoint localpath="/websitedemo/logout.ashx" type="logout" redirectUrl="/websitedemo/Default.aspx" index="1" />
       <ServiceEndpoint localpath="/websitedemo/logout.ashx" type="soaplogout" errorBehaviour="throwexception" />
