Add /websitedemo/ to form login element

--- a/Kombit.Samples.CH.WebsiteDemo/Web.config
+++ b/Kombit.Samples.CH.WebsiteDemo/Web.config
@@ -79,7 +79,7 @@
   </SAML20Federation>
   <system.web>
     <authentication mode="Forms">
-      <forms cookieless="UseCookies" loginUrl="/login.ashx" name="DemoServiceProvider" timeout="30" />
+      <forms cookieless="UseCookies" loginUrl="/websitedemo/login.ashx" name="DemoServiceProvider" timeout="30" />
     </authentication>
     <sessionState mode="Off" />
     <compilation debug="true" targetFramework="4.5" />
