--- a/Deployment/Kombit.Samples.CH.WebsiteDemo/Web.config
+++ b/Deployment/Kombit.Samples.CH.WebsiteDemo/Web.config
@@ -36,7 +36,7 @@
     <SessionTimeout>30</SessionTimeout>
     <SigningCertificate findValue="4678237245FEDC8059D113675955DFB870D36BF4" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint" />
     <AllowedAudienceUris>
-      <Audience>https://claimapp.projekt-stoettesystemerne.dk</Audience>
+      <Audience>https://saml.claimapp.adgangsstyring.eksterntest-stoettesystemerne.dk</Audience>
     </AllowedAudienceUris>
     <Actions>
       <clear />
@@ -47,7 +47,7 @@
   </Federation>
   <SAML20Federation xmlns="urn:dk.nita.saml20.configuration">
     <ShowError>true</ShowError>
-    <ServiceProvider id="https://claimapp.projekt-stoettesystemerne.dk" server="https://claimapp.projekt-stoettesystemerne.dk">
+    <ServiceProvider id="https://saml.claimapp.adgangsstyring.eksterntest-stoettesystemerne.dk" server="https://claimapp.adgangsstyring.eksterntest-stoettesystemerne.dk">
       <ServiceEndpoint localpath="/login.ashx" type="signon" redirectUrl="/MyPage.aspx?action=sso" index="0" />
       <ServiceEndpoint localpath="/logout.ashx" type="logout" redirectUrl="/Default.aspx" index="1" />
       <ServiceEndpoint localpath="/logout.ashx" type="soaplogout" errorBehaviour="throwexception" />
@@ -69,7 +69,7 @@
     </RequestedAttributes>
     <NameIdFormat>urn:oasis:names:tc:SAML:1.1:nameid-format:X509SubjectName</NameIdFormat>
     <IDPEndPoints metadata="metadata">
-      <add id="https://saml.adgangsstyring.projekt-stoettesystemerne.dk">
+      <add id="https://saml.adgangsstyring.eksterntest-stoettesystemerne.dk">
         <CertificateValidation>
           <add type="dk.nita.saml20.Specification.DefaultCertificateSpecification, dk.nita.saml20, Version=1.7.11.0, Culture=neutral" />
         </CertificateValidation>
