#64545 [VA-049] Context Handler - core runtime - supports re-authentication using another IdP in the same browser session - SSO

--- a/Kombit.Samples.CH.WebsiteDemo/Web.config
+++ b/Kombit.Samples.CH.WebsiteDemo/Web.config
@@ -83,7 +83,7 @@
   </SAML20Federation>
   <system.web>
     <authentication mode="Forms">
-      <forms cookieless="UseCookies" loginUrl="/login.ashx" name="DemoServiceProvider" timeout="30" />
+      <forms cookieless="UseCookies" loginUrl="/login.ashx?first=true" name="DemoServiceProvider" timeout="30" />
     </authentication>
     <sessionState mode="Off" />
     <compilation debug="true" targetFramework="4.5" />
