#64545 [VA-049] Context Handler - core runtime - supports re-authentication using another IdP in the same browser session - SSO

--- a/Kombit.Samples.CH.WebsiteDemo/Web.config
+++ b/Kombit.Samples.CH.WebsiteDemo/Web.config
@@ -9,7 +9,7 @@
     <add key="SignatureAlgorithmMethod" value="Sha256" />
     <!-- When enabled, offer buttons to re-send AuthnRequest to IdP with different Assurance Levels -->
     <add key="OfferAssuranceLevel" value="true" />
-    <!-- When enabled, the first authentication request sent to  -->
+    <!-- When enabled, the first authentication request sent to IdP will use this assurance level -->
     <add key="UseAssuranceLevel" value="2" />
   </appSettings>
   <log4net>
