--- a/Deployment/Kombit.Samples.CH.WebsiteDemo/Web.config
+++ b/Deployment/Kombit.Samples.CH.WebsiteDemo/Web.config
@@ -7,6 +7,10 @@
   </configSections>
   <appSettings>
     <add key="SignatureAlgorithmMethod" value="Sha256" />
+    <!-- When enabled, offer buttons to re-send AuthnRequest to IdP with different Assurance Levels -->
+    <add key="OfferAssuranceLevel" value="true" />
+    <!-- When enabled, the first authentication request sent to IdP will use this assurance level -->
+    <add key="UseAssuranceLevel" value="2" />
   </appSettings>
   <log4net>
     <root>
@@ -36,7 +40,7 @@
     <SessionTimeout>30</SessionTimeout>
     <SigningCertificate findValue="4678237245FEDC8059D113675955DFB870D36BF4" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint" />
     <AllowedAudienceUris>
-      <Audience>https://saml.claimapp.adgangsstyring.eksterntest-stoettesystemerne.dk</Audience>
+      <Audience>https://claimapp.eksterntest-stoettesystemerne.dk</Audience>
     </AllowedAudienceUris>
     <Actions>
       <clear />
@@ -47,7 +51,7 @@
   </Federation>
   <SAML20Federation xmlns="urn:dk.nita.saml20.configuration">
     <ShowError>true</ShowError>
-    <ServiceProvider id="https://saml.claimapp.adgangsstyring.eksterntest-stoettesystemerne.dk" server="https://claimapp.adgangsstyring.eksterntest-stoettesystemerne.dk">
+    <ServiceProvider id="https://claimapp.eksterntest-stoettesystemerne.dk" server="https://claimapp.eksterntest-stoettesystemerne.dk">
       <ServiceEndpoint localpath="/login.ashx" type="signon" redirectUrl="/MyPage.aspx?action=sso" index="0" />
       <ServiceEndpoint localpath="/logout.ashx" type="logout" redirectUrl="/Default.aspx" index="1" />
       <ServiceEndpoint localpath="/logout.ashx" type="soaplogout" errorBehaviour="throwexception" />
@@ -79,7 +83,7 @@
   </SAML20Federation>
   <system.web>
     <authentication mode="Forms">
-      <forms cookieless="UseCookies" loginUrl="/login.ashx" name="DemoServiceProvider" timeout="30" />
+      <forms cookieless="UseCookies" loginUrl="/login.ashx?first=true" name="DemoServiceProvider" timeout="30" />
     </authentication>
     <sessionState mode="Off" />
     <compilation debug="true" targetFramework="4.5" />
