--- a/Kombit.Samples.CH.WebsiteDemo/Web.config
+++ b/Kombit.Samples.CH.WebsiteDemo/Web.config
@@ -8,9 +8,9 @@
   <appSettings>
     <add key="SignatureAlgorithmMethod" value="Sha256" />
     <!-- When enabled, offer buttons to re-send AuthnRequest to IdP with different Assurance Levels -->
-    <add key="OfferAssuranceLevel" value="true" />
+    <!--<add key="OfferAssuranceLevel" value="true" />-->
     <!-- When enabled, the first authentication request sent to IdP will use this assurance level -->
-    <add key="UseAssuranceLevel" value="2" />
+    <!--<add key="UseAssuranceLevel" value="2" />-->
   </appSettings>
   <log4net>
     <root>
@@ -83,7 +83,7 @@
   </SAML20Federation>
   <system.web>
     <authentication mode="Forms">
-      <forms cookieless="UseCookies" loginUrl="/login.ashx?first=true" name="DemoServiceProvider" timeout="30" />
+      <forms cookieless="UseCookies" loginUrl="/login.ashx" name="DemoServiceProvider" timeout="30" />
     </authentication>
     <sessionState mode="Off" />
     <compilation debug="true" targetFramework="4.5" />
